test/parsing/ferguson/reserved-index.good
reserved-index.chpl:1: error: attempt to redefine reserved type 'index'
reserved-index.chpl:3: error: attempt to redefine reserved type 'index'
reserved-index.chpl:6: error: attempt to redefine reserved type 'index'
reserved-index.chpl:7: error: attempt to redefine reserved type 'index'
reserved-index.chpl:10: error: attempt to redefine reserved type 'index'
reserved-index.chpl:12: error: attempt to redefine reserved type 'index'
reserved-index.chpl:17: error: attempt to redefine reserved type 'index'
