test/parsing/ferguson/reserved-index.chpl
var index:int;

proc f(index) {
}

class index {
  var index:int;
}

type index = int;

proc index() {
}

proc test() {
  try {
  } catch index {
  }
}
